--- a/src/Components/Canvas/TextBlock/TextBlock.module.css
+++ b/src/Components/Canvas/TextBlock/TextBlock.module.css
@@ -6,3 +6,14 @@
 .text p {
     position: absolute;
 }
+
+.textarea{
+    background: none;
+    outline: none;
+    overflow: hidden;
+    border: none;
+    width: 100%;
+    height: 100%;
+    resize: none;
+    padding: 2px 0 0 3px;
+}
