--- a/src/Components/Sidebar/SidebarItemOption/TextOptions/TextOptionsSelect/TextOptionsSelect.module.css
+++ b/src/Components/Sidebar/SidebarItemOption/TextOptions/TextOptionsSelect/TextOptionsSelect.module.css
@@ -1,13 +1,13 @@
 .pacifico_select {
-    font-family: 'Pacifico';
+    font-family: Pacifico;
 }
 
 .roboto_select {
-    font-family: 'Roboto';
+    font-family: Roboto;
 }
 
 .lemon_select {
-    font-family: 'Lemon';
+    font-family: Lemon;
 }
 
 .openSans_select {
