--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,31 +1,31 @@
 .wrapper {
-    height: 60px;
-    display: flex;
+  height: 60px;
+  display: flex;
 
-    /* justify-content: space-between; */
-    align-items: center;
-    padding: 10px;
-    margin: 5px;
-    border-radius: 5px;
-    background-color: #299B01;
-    color: white;
+  /* justify-content: space-between; */
+  align-items: center;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 5px;
+  background-color: #299b01;
+  color: white;
 }
 
 .logoImg {
-    width: 50px;
-    margin-right: 10px;
+  width: 50px;
+  margin-right: 10px;
 }
 
 .logo {
-    width: 300px;
-    height: 50px;
-    display: flex;
-    font-size: 25px;
-    font-weight: 400;
-    border-right: #000;
-    align-items: center;
+  width: 300px;
+  height: 50px;
+  display: flex;
+  font-size: 25px;
+  font-weight: 400;
+  border-right: #000;
+  align-items: center;
 }
 
 .export_button {
-    margin-left: auto;
+  margin-left: auto;
 }
